# aiohue

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  coverage.xml  example.py  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: pr-labels.yaml  pre-commit-updater.yml  release-drafter.yml  release.yml  test.yml
aiohue/: __init__.py  api.py  bridge.py  clip.py  config.py  discovery.py  errors.py  groups.py  lights.py  scenes.py  sensors.py  util.py
aiohue/controllers/: base.py  bridge_config.py  events.py  groups.py  lights.py  scenes.py  sensors.py
aiohue/models/: __init__.py  behavior_instance.py  behavior_script.py  bridge.py  bridge_home.py  button.py  clip.py  connectivity.py  depender.py  device.py  device_power.py  entertainment.py  feature.py  geofence_client.py  group.py  grouped_light.py  homekit.py  light.py  light_level.py  motion.py  relative_rotary.py  resource.py  room.py  scene.py  script.py  temperature.py  zone.py
aiohue/syncbox/: __init__.py  errors.py  syncbox.py
aiohue/syncbox/models/: __init__.py  behavior.py  device.py  execution.py
aiohue/v1/: __init__.py  api.py  config.py  groups.py  lights.py  scenes.py  sensors.py  util.py
aiohue/v2/: __init__.py  scene_activity.py
aiohue/v2/controllers/: __init__.py  base.py  config.py  devices.py  events.py  groups.py  lights.py  scenes.py  sensors.py  speakers.py
aiohue/v2/models/: behavior_instance.py  behavior_script.py  bell_button.py  bridge.py  bridge_home.py  button.py  camera_motion.py  clip.py  connectivity.py  contact.py  convenience_area_motion.py  depender.py  device.py  device_power.py  entertainment.py  entertainment_configuration.py  feature.py  geofence_client.py  group.py  grouped_light.py  grouped_light_level.py  grouped_motion.py  homekit.py  light.py  light_level.py  matter.py  matter_fabric.py  motion.py  motion_area_configuration.py  relative_rotary.py  resource.py  room.py  scene.py  script.py  security_area_motion.py  service_group.py  smart_scene.py  speaker.py  speaker_feature.py  tamper.py  (+4 more)
docs/: clip-api.schema.json
examples/: authentication.py  discovery.py  ruff.toml  syncbox_example.py  test_requests.py  v1_bridge.py  v2_bridge.py
script/: release
scripts/: setup.sh
tests/: common.py
tests/fixtures/: battery_state.json  syncbox_state.json  v2_resources.json
tests/syncbox/: __init__.py  conftest.py  test_client.py  test_models.py
tests/v1/: test_init.py
tests/v2/: conftest.py  test_base_resource_controller.py  test_button_controller.py  test_init.py  test_parser.py  test_scene_activity_tracker.py  test_scene_status.py
